# minirend

./: .gitmodules  CMakeLists.txt  README.md  hello.cpp
include/: .string_util.h.swp  .tgaimage.h.swp  minirend.h  string_util.h
src/: .main.cpp.swp  ;  main.cpp
